--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "api-starter-kit",
   "version": "1.0.0",
   "description": "A starter template for TypeScript and Node",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "npm run build && npm run serve",
-    "dev": "node src/index.ts",
+    "dev": "nodemon src/server.ts",
     "build": "npm run build-ts && npm run lint",
     "build-ts": "tsc",
     "serve": "node dist/server.js",
@@ -32,12 +32,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/mongoose": "^5.5.36",
